--- a/_sass/helpers/_animations.scss
+++ b/_sass/helpers/_animations.scss
@@ -22,6 +22,34 @@
     }
 }
 
+.anim_fadein {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+}
+
+@-webkit-keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.anim_fadeout {
+    -webkit-animation-name: fadeOut;
+    animation-name: fadeOut;
+}
+
 @keyframes fadeindown{
 	from{
 		transform: translate(0px, -31px);
