--- a/_sass/pages/_news.scss
+++ b/_sass/pages/_news.scss
@@ -1,7 +1,7 @@
 .news-page{
 	margin-top: 170px;
 	.new{
-		margin-bottom: 30px; 
+		margin-bottom: 30px; 	
 	}
 	.archive-links{
 		margin-top:20px;
@@ -15,3 +15,69 @@
 .news_section .new, .news-page .new{
 	cursor: pointer;
 }
+.news_section, .news-page {
+    background-image: url(../images/bkg_blue.png);
+    padding-bottom: 50px;
+    padding-top: 20px;
+    .h1_big_news{
+    	color: #fff;
+    }
+    .new{
+    	height: 425px;
+    	@media (max-width: 992px) {
+	    	height: 650px;
+	    	margin-bottom: 20px;
+		}
+		@media (max-width: 720px) {
+	    	height: 570px;
+		}
+		@media (max-width: 620px) {
+	    	height: 470px;
+		}
+		@media (max-width: 520px) {
+	    	height: 450px;
+		}
+		@media (max-width: 420px) {
+	    	height: 390px;
+		}
+    	position:relative;
+    	background-color: #fff;
+    	padding: 0;
+    	.p_news{
+		    padding-bottom: 20px;
+			color: #505050;
+		}
+		.h1_news {
+		    margin-bottom: 10px;
+		    color: #0087cd;
+		    font-size: 26px;
+		    line-height: 32px;
+		    @media (max-width: 700px) {
+	    		font-size: 18px;
+	    		line-height: 24px;
+			}
+		}
+    	p{
+    		text-align: justify;
+    	}
+    	h1,p{
+    		padding: 0 12px;
+    	}
+    	.news_date{
+	    	a{
+	    		float: right;
+	    	}
+	    	width: 100%;
+			position: absolute;
+			bottom:0;
+		}
+		> div{
+			z-index: 1;
+			overflow: hidden;
+		}
+    }
+}
+.grow { 
+	transition: all 0.4s ease-in-out; 
+}
+.grow:hover { transform: scale(1.1); }
