--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -6,7 +6,7 @@
 <script src="{{site.url}}/js/vendors/featherlight.min.js"></script>
 <script src="{{site.url}}/js/vendors/jquery.dotdotdot.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpBk0OIM7nh9iOiqxslyGPBSRp_uVaCmw"></script>
-<script src="{{site.url}}/js/vendors/jquery.digital-fusion.js"></script>
+<script src="{{site.url}}/js/vendors/jquery.visible.min.js"></script>
 <script src="{{site.url}}/js/common.js" type="text/javascript"></script>
 
 <!-- Polyfill -->
