--- a/_layouts/single-news-de.html
+++ b/_layouts/single-news-de.html
@@ -10,6 +10,8 @@ layout: default
 	<div class="container news-content">
     <h1>{{ page.titreDe }}</h1>
     <p>{{ page.texteLongDe | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
-    <p class="news_date">{{page.date | date: "%d.%m.%Y"}}</p>
+    <p class="news_date">
+		<time pubdate datetime="{{page.date | date_to_xmlschema}}" title="{{page.date | date_to_xmlschema | date: '%d.%m'}}">{{page.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
+	</p>
 	</div>
 </div>
