--- a/_layouts/single-news-fr.html
+++ b/_layouts/single-news-fr.html
@@ -12,6 +12,8 @@ layout: default
 	    {% capture text %}{% endcapture %}
     <h1>{{page.titre}}</h1>
     <p>{{ page.texteLong | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
-    <p class="news_date">{{page.date | date: "%d.%m.%Y"}}</p>
+    <p class="news_date">
+		<time pubdate datetime="{{page.date | date_to_xmlschema}}" title="{{page.date | date_to_xmlschema | date: '%d.%m'}}">{{page.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
+	</p>
 	</div>
 </div>
