--- a/_sass/helpers/_animations.scss
+++ b/_sass/helpers/_animations.scss
@@ -1,10 +1,75 @@
+/* ===========================================
+   Animations
+   =========================================== */
+
+.come-in {
+    transform: translateY(150px);
+    animation: come-in 0.8s ease forwards;
+}
+
+.come-in:nth-child(odd) {
+    animation-duration: 0.6s;
+    /* So they look staggered */
+}
+
+.fade-in {
+    animation: fadeIn 2s;
+}
+
+.already-visible {
+    transform: translateY(0);
+    animation: none;
+}
+
+.slidedown, .slideup {
+    opacity: 0;
+    overflow-y: hidden;
+    max-height: 0px;
+    transition-property: all;
+    transition-duration: .8s;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+}
+
+.slidedown {
+    opacity: 1;
+    max-height: 50px;
+}
+
+.fade-in {
+    -webkit-animation-name: fadein;
+    animation-name: fadein;
+}
+
+.fade-out {
+    -webkit-animation-name: fadeout;
+    animation-name: fadeout;
+}
+
+.fade-in-down {
+	animation-name: fadeindown;
+	animation-duration: 1s;
+	animation-iteration-count: 1;
+}
+
+.fade-in-top {
+	animation-name: fadeintop;
+	animation-duration: 1s;
+	animation-iteration-count: 1;
+}
+
+.fade-in-scale-up {
+	animation-name: fadeinscaleup;
+	animation-duration: 1s;
+	animation-iteration-count: 1;
+}
+
 @keyframes come-in {
     to {
         transform: translateY(0);
     }
 }
 
-@-webkit-keyframes fadeIn {
+@-webkit-keyframes fadein {
     0% {
         opacity: 0;
     }
@@ -13,7 +78,7 @@
     }
 }
 
-@keyframes fadeIn {
+@keyframes fadein {
     0% {
         opacity: 0;
     }
@@ -22,12 +87,7 @@
     }
 }
 
-.anim_fadein {
-    -webkit-animation-name: fadeIn;
-    animation-name: fadeIn;
-}
-
-@-webkit-keyframes fadeOut {
+@-webkit-keyframes fadeout {
     0% {
         opacity: 1;
     }
@@ -36,18 +96,13 @@
     }
 }
 
-@keyframes fadeOut {
+@keyframes fadeout {
     0% {
         opacity: 1;
     }
     100% {
         opacity: 0;
     }
-}
-
-.anim_fadeout {
-    -webkit-animation-name: fadeOut;
-    animation-name: fadeOut;
 }
 
 @keyframes fadeindown{
@@ -62,12 +117,6 @@
 	}
 }
 
-.anim_fadeindown {
-	animation-name: fadeindown;
-	animation-duration: 1s;
-	animation-iteration-count: 1;
-}
-
 @keyframes fadeintop{
 	from{
 		transform: translate(0px, 30px);
@@ -80,12 +129,6 @@
 	}
 }
 
-.anim_fadeintop {
-	animation-name: fadeintop;
-	animation-duration: 1s;
-	animation-iteration-count: 1;
-}
-
 @keyframes fadeinscaleup{
 	from{
 		transform: scale(0.67);
@@ -96,10 +139,4 @@
 		transform: scale(1);
 		opacity:1;
 	}
-}
-
-.anim_fadeinscaleup {
-	animation-name: fadeintop;
-	animation-duration: 1s;
-	animation-iteration-count: 1;
 }
