--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -10,6 +10,7 @@
     }
     p{
     	text-align: justify;
+        hyphens: auto;
     	color: #fff;
     	margin-bottom: 50px;
 	    margin-top: 20px;
