--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -77,6 +77,7 @@ html .hero {
 
 .about_the_yog_p {
     text-align: justify;
+    hyphens: auto;
     a {
         color: #fff;
         text-decoration: underline;
