--- a/_sass/helpers/_animations.scss
+++ b/_sass/helpers/_animations.scss
@@ -23,7 +23,7 @@
 
 .slidedown, .slideup {
     opacity: 0;
-    overflow-y: hidden;
+    overflow: hidden;
     max-height: 0px;
     transition-property: all;
     transition-duration: .8s;
