--- a/_sass/pages/_news.scss
+++ b/_sass/pages/_news.scss
@@ -61,7 +61,7 @@
     		text-align: justify;
     	}
     	h1,p{
-    		padding: 0 12px;
+    		padding: 5px 20px;
     	}
     	.news_date{
 	    	a{
