--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -11,7 +11,7 @@ layout: default
     <h1>{{ page.titreEn }}</h1>
     <p>{{ page.texteLongEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
     <p class="news_date">
-		<time pubdate datetime="{{page.date | time_tag}}">{{page.date | date: "%d.%m.%Y"}}</time>
+		<time pubdate datetime="{{page.date | date_to_xmlschema}}" title="{{page.date | date_to_xmlschema | date: '%d.%m'}}">{{page.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
 	</p>
 	</div>
 </div>
