--- a/css/lausanne2020.css
+++ b/css/lausanne2020.css
@@ -503,7 +503,7 @@ h1 {
 .news_date {
     margin-bottom: 5px;
     font-family: Montserrat, sans-serif;
-    color: #a5a5a5;
+    color: #b6b6b6;
     font-size: 12px;
     text-align: left;
 }
@@ -670,10 +670,6 @@ h1 {
         width: 100%;
         padding-right: 30px;
         padding-left: 30px;
-    }
-    .the_claim {
-        font-size: 90px;
-        line-height: 100px;
     }
     .about_yog_section {
         height: auto;
@@ -860,15 +856,10 @@ h1 {
 
 @media (max-width: 479px) {
     .hero {
-        height: 410px;
+        height: 600px;
     }
     .enorme_claim_wrap {
         padding-top: 165px;
-    }
-    .the_claim {
-        font-size: 30px;
-        line-height: 35px;
-        text-align: center;
     }
     .h1_about_yog {
         text-align: center;
