--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,8 @@
   <link href="{{ "/css/components.css" | prepend: site.baseurl_root }}" rel="stylesheet" type="text/css">
   <link href="{{ "/css/lausanne2020.css" | prepend: site.baseurl_root }}" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl_root }}">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
-  <script type="text/javascript">
+  <script rel="preload" src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+  <script rel="preload" type="text/javascript">
     WebFont.load({
       google: {
         families: ["Montserrat:400,700","Sanchez:regular,italic"]
