--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -11,6 +11,12 @@
     }
 }
 
+@media (max-width: 768px) {
+    .navbar-custom {
+        padding: 2vmin 0 0 0;
+    }
+}
+
 .nav_link,
 .nav_link:hover,
 .nav_link:visited,
@@ -25,24 +31,25 @@
     color: $blue-primary;
 }
 
+
 /* Line slider */
 
 .nav_link:not(.nav_lang)::before {
-	content: '';
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	height: 1.5px;
-	background: $purple-primary;
-	transform: scale3d(0, 1, 1);
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 1.5px;
+    background: $purple-primary;
+    transform: scale3d(0, 1, 1);
     transition: transform 0.1s;
 }
 
 .nav_link:not(.nav_lang).w--current::before {
-	transform: scale3d(1, 1, 1);
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-	transition-duration: 0.3s;
+    transform: scale3d(1, 1, 1);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 0.3s;
 }
 
 .nav_link.w--current {
