--- a/_sass/helpers/_animations.scss
+++ b/_sass/helpers/_animations.scss
@@ -21,7 +21,8 @@
     animation: none;
 }
 
-.slidedown, .slideup {
+.slidedown,
+.slideup {
     opacity: 0;
     overflow: hidden;
     max-height: 0px;
@@ -46,21 +47,77 @@
 }
 
 .fade-in-down {
-	animation-name: fadeindown;
-	animation-duration: 1s;
-	animation-iteration-count: 1;
+    animation-name: fadeindown;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
 }
 
 .fade-in-top {
-	animation-name: fadeintop;
-	animation-duration: 1s;
-	animation-iteration-count: 1;
+    animation-name: fadeintop;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
 }
 
 .fade-in-scale-up {
-	animation-name: fadeinscaleup;
-	animation-duration: 1s;
-	animation-iteration-count: 1;
+    animation-name: fadeinscaleup;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+}
+
+.flip {
+    animation-name: flipin;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function:ease-in;
+}
+
+.flip:hover {
+    animation-name: flipout;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function:ease-out;
+}
+
+@-webkit-keyframes flipin {
+    from {
+        transform: rotate3d(0,1,0,0deg);
+    }
+    to {
+        transform: rotate3d(0,1,0,360deg);
+    }
+}
+
+@keyframes flipin {
+    from {
+        transform: rotate3d(0,1,0,0deg);
+    }
+    to {
+        transform: rotate3d(0,1,0,360deg);
+    }
+}
+
+@-webkit-keyframes flipout {
+    from {
+        transform: rotate3d(0,1,0,360deg);
+    }
+    to {
+        transform: rotate3d(0,1,0,0deg);
+    }
+}
+
+@keyframes flipout {
+    from {
+        transform: rotate3d(0,1,0,360deg);
+    }
+    to {
+        transform: rotate3d(0,1,0,0deg);
+    }
+}
+
+@-webkit-keyframes come-in {
+    to {
+        transform: translateY(0);
+    }
 }
 
 @keyframes come-in {
@@ -105,38 +162,35 @@
     }
 }
 
-@keyframes fadeindown{
-	from{
-		transform: translate(0px, -31px);
-		opacity:0;
-
-	}
-	to{
-		transform: translate(0px, 0px);
-		opacity:1;
-	}
+@keyframes fadeindown {
+    from {
+        transform: translate(0px, -31px);
+        opacity: 0;
+    }
+    to {
+        transform: translate(0px, 0px);
+        opacity: 1;
+    }
 }
 
-@keyframes fadeintop{
-	from{
-		transform: translate(0px, 30px);
-		opacity:0;
-
-	}
-	to{
-		transform: translate(0px, 0px);
-		opacity:1;
-	}
+@keyframes fadeintop {
+    from {
+        transform: translate(0px, 30px);
+        opacity: 0;
+    }
+    to {
+        transform: translate(0px, 0px);
+        opacity: 1;
+    }
 }
 
-@keyframes fadeinscaleup{
-	from{
-		transform: scale(0.67);
-		opacity:0;
-
-	}
-	to{
-		transform: scale(1);
-		opacity:1;
-	}
+@keyframes fadeinscaleup {
+    from {
+        transform: scale(0.67);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
