--- a/_sass/helpers/_animations.scss
+++ b/_sass/helpers/_animations.scss
@@ -64,53 +64,71 @@
     animation-iteration-count: 1;
 }
 
-.flip {
+.flip-in {
     animation-name: flipin;
     animation-duration: 1s;
     animation-iteration-count: 1;
-    animation-timing-function:ease-in;
 }
 
-.flip:hover {
+.flip-out {
     animation-name: flipout;
     animation-duration: 1s;
     animation-iteration-count: 1;
-    animation-timing-function:ease-out;
 }
 
 @-webkit-keyframes flipin {
-    from {
-        transform: rotate3d(0,1,0,0deg);
+    0% {
+        transform: rotateY(0deg);
+        opacity:1;
     }
-    to {
-        transform: rotate3d(0,1,0,360deg);
+    50%{
+        opacity:0.5;
+    }
+    100% {
+        transform: rotateY(360deg);
+        opacity:1;
     }
 }
 
 @keyframes flipin {
-    from {
-        transform: rotate3d(0,1,0,0deg);
+    0% {
+        transform: rotateY(0deg);
+        opacity:1;
     }
-    to {
-        transform: rotate3d(0,1,0,360deg);
+    50%{
+        opacity:0.5;
+    }
+    100% {
+        transform: rotateY(360deg);
+        opacity:1;
     }
 }
 
 @-webkit-keyframes flipout {
-    from {
-        transform: rotate3d(0,1,0,360deg);
+    0% {
+        transform: rotateY(360deg);
+        opacity:1;
     }
-    to {
-        transform: rotate3d(0,1,0,0deg);
+    50%{
+        opacity:0.5;
+    }
+    100% {
+        transform: rotateY(0deg);
+        opacity:1;
     }
 }
 
 @keyframes flipout {
-    from {
-        transform: rotate3d(0,1,0,360deg);
+    0% {
+        transform: rotateY(360deg);
+        opacity:1;
     }
-    to {
-        transform: rotate3d(0,1,0,0deg);
+    50%{
+        opacity:0.8;
+    }
+    100% {
+        transform: rotateY(0deg);
+        opacity:1;
     }
 }
 
