--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.baseurl_root }}">
 
-  <link rel="stylesheet" href="{{ "/css/vendors/normalize.css" | prepend: site.baseurl_root }}">
+  <link rel="stylesheet" href="{{ "/css/vendors/normalize.min.css" | prepend: site.baseurl_root }}">
   <link rel="stylesheet" href="{{ "/css/vendors/bootstrap.min.css" | prepend: site.baseurl_root }}">
   <link rel="stylesheet" href="{{ "/css/vendors/featherlight.min.css" | prepend: site.baseurl_root }}">
   <link href="{{ "/css/components.css" | prepend: site.baseurl_root }}" rel="stylesheet" type="text/css">
