--- a/_sass/components/_social_wall.scss
+++ b/_sass/components/_social_wall.scss
@@ -22,8 +22,8 @@
     }
     .item {
         font-family: Montserrat, sans-serif;
-        padding-top: 15px;
-        padding-bottom: 15px;
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
     .wrap_item {
         height: 400px;
@@ -42,7 +42,7 @@
             width: 100%;
             object-fit: cover;
         }
-        >video.fullscreen{
+        >video.fullscreen {
             object-fit: contain;
         }
         /* Social_wall Blockquote */
@@ -94,91 +94,81 @@
     .no_media .wrap_media blockquote {
         opacity: 0.9;
         height: 202px;
-        top:15px;
+        top: 15px;
     }
     // Status
-    .wrap_status {
-        padding: 10px 15px;
-        .user_info {
-            padding-top: 15px;
-            margin-right: 0;
-            .profil_image,
-            .user_info,
-            .wrap_user_name,
-            .icon_social {
-                margin: 0;
-                padding: 0;
-            }
-            .profile_image {
-                margin-right: 5px;
-                img {
-                    /*border-radius: 50%;*/
-                    width: 55px;
-                }
-            }
-            .wrap_user_name {
-                margin-left: -5px;
-                .user,
-                .username {
-                    padding: 0;
-                    margin: 0;
-                    line-height: 0;
-                }
-                .user a {
-                    font-size: 18px;
-                    line-height: 24px;
-                    color: $purple-primary;
-                }
-                .username a {
-                    color: #b6b6b6;
-                    font-size: 14px;
-                    line-height: 20px;
-                    font-weight: 300;
-                }
-            }
-        }
-        /* Status/message */
-        .status_box {
-            height: 60px;
-            position: relative;
-            overflow: hidden;
-            clear: both;
+    .user_info {
+        padding: 20px 20px 0 20px;
+        margin-right: 0;
+        .profil_image,
+        .user_info,
+        .wrap_user_name,
+        .icon_social {
             margin: 0;
-            p.status {
-                color: #858585;
-                font-size: 13px;
-                line-height: 20px;
-                font-family: sans-serif;
-                height: 40px;
-                a,
-                a:visited,
-                a:active,
-                a:link {
-                    color: $blue-primary;
-                    font-size: 13px;
-                }
-                a:hover {
-                    color: #666;
-                }
+            padding: 0;
+        }
+        .profile_image {
+            margin-right: 5px;
+            img {
+                /*border-radius: 50%;*/
+                width: 55px;
             }
         }
-        /* Social_wall meta info */
-        .meta_info {
-            position: absolute;
-            bottom: 20px;
-            width: 100%;
-            a {
-                padding: 2px;
+        .wrap_user_name {
+            margin-left: -5px;
+            .user,
+            .username {
+                padding: 0;
+                margin: 0;
+                line-height: 0;
             }
-            time {
+            .user a {
+                font-size: 18px;
+                line-height: 24px;
+                color: $purple-primary;
+            }
+            .username a {
                 color: #b6b6b6;
-                font-size: 12px;
+                font-size: 14px;
+                line-height: 20px;
+                font-weight: 300;
             }
-            .icon_social {
-                position:relative;
-                float: right;
-                right: 60px;
-            }
+        }
+    }
+    /* Status/message */
+    p.status {
+        padding: 10px 20px;
+        margin-bottom:10px;
+        color: #858585;
+        font-size: 13px;
+        line-height: 20px;
+        font-family: sans-serif;
+        a,
+        a:visited,
+        a:active,
+        a:link {
+            color: $blue-primary;
+            font-size: 13px;
+        }
+        a:hover {
+            color: #666;
+        }
+    }
+    /* Social_wall meta info */
+    .meta_info {
+        width: 100%;
+        position: relative;
+        background: #fff;
+        padding: 10px 20px;
+        a {
+            padding: 2px;
+        }
+        time {
+            color: #b6b6b6;
+            font-size: 12px;
+        }
+        .icon_social {
+            float: right;
         }
     }
 }
