--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -26,7 +26,10 @@ html .hero {
     background-image: url(../images/lausanne_overview.jpg);
     background-attachment: fixed !important;
     background-repeat: no-repeat;
-    background-position-y: -400px;
+    background-position-y: -200px;
+    @media (min-width: 1651px) and (min-height: 1000px) {
+        background-position-y: -400px;
+    }
     @media (min-width: 1651px) {
         background-size: cover;
     }
@@ -61,6 +64,7 @@ html .hero {
     position: absolute;
     font-family: Montserrat, sans-serif;
     color: #0087cd;
+    width:inherit;
     font-size: 81px;
     line-height: 90px;
     font-weight: 700;
