--- a/_sass/components/_social_wall.scss
+++ b/_sass/components/_social_wall.scss
@@ -49,11 +49,12 @@
         blockquote {
             overflow: hidden;
             margin: 0;
-            height: 115px;
+            padding:40px;
+            height: 202px;
             position: absolute;
             background: #FAFAFA;
             opacity: 0;
-            top: 102px;
+            top: 0;
             right: 15px;
             left: 15px;
             border: 0;
