--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -7,5 +7,5 @@
 <script src="{{site.url}}/js/vendors/jquery.dotdotdot.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpBk0OIM7nh9iOiqxslyGPBSRp_uVaCmw"></script>
 <script src="{{site.url}}/js/vendors/jquery.visible.min.js"></script>
-<script src="{{site.url}}/js/common.min.js"></script>
+<script src="{{site.url}}/js/common.js"></script>
 
