--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -176,6 +176,7 @@ html .hero {
         max-width: 50%;
         @media(max-width: 992px) {
             flex-basis: 100%;
+            max-width: 100%;
             padding-right: 0px;
         }
     }
@@ -185,6 +186,7 @@ html .hero {
         max-width: 50%;
         @media(max-width: 992px) {
             flex-basis: 100%;   
+            max-width: 100%;
             padding-left: 0px;
         }
         .newsletter-form-adress{
