--- a/_sass/components/_smoothstate.scss
+++ b/_sass/components/_smoothstate.scss
@@ -14,8 +14,8 @@
     transition-timing-function: ease-in;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
-    -webkit-animation-name: fadeIn;
-    animation-name: fadeIn;
+    -webkit-animation-name: fadein;
+    animation-name: fadein;
 }
 
 #main.is-exiting>div {
