Fix large screen parallax

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -27,10 +27,8 @@ html .hero {
     background-attachment: fixed !important;
     background-repeat: no-repeat;
     background-position-y: -200px;
-    @media (min-width: 1651px) and (min-height: 1000px) {
-        background-position-y: -400px;
-    }
     @media (min-width: 1651px) {
+        background-position-y: 100%;
         background-size: cover;
     }
     @media (max-width: 1450px) {
