Adding Sass compression from jekyll original, bundle sass with old css from webflow, html+js with plugin

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,11 @@
 ---
 ---
 
+/* Webflow to incorpore */
+
+@import "_lausanne2020.scss";
+@import "_components.scss";
+
 /* Helpers */
 @import "helpers/_variables.scss";
 @import "helpers/_mixins.scss";
