--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="{{ "/css/vendors/featherlight.min.css" | prepend: site.baseurl_root }}">
 <script src="{{site.url}}/js/vendors/jquery-3.2.0.min.js"></script>
 <script src="{{site.url}}/js/vendors/polyfill/modernizr.js"></script>
 <script src="{{site.url}}/js/vendors/jquery.smoothState.min.js"></script>
