--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,10 +63,10 @@
       <div class="col-md-6 footer-pics">
         <div class="links_social">
           <a class="links_games w-inline-block" href="https://www.instagram.com/lausanne2020" target="_blank">
-            <img height="40" sizes="40px" src="/images/Instagram-logo.png" srcset="/images/Instagram-logo.png 500w, /images/Instagram-logo.png 512w">
+            <img height="40" sizes="40px" src="/images/Instagram-logo.png">
           </a>
           <a class="links_games w-inline-block" href="https://www.facebook.com/lausanne2020/" target="_blank">
-            <img height="40" sizes="40px" src="/images/facebook-icon-preview-1.png" srcset="/images/facebook-icon-preview-1.png 500w, /images/facebook-icon-preview-1.png 512w">
+            <img height="40" sizes="40px" src="/images/facebook-icon.png">
           </a>
           <a class="w-inline-block" href="https://twitter.com/lausanne2020" target="_blank">
             <img height="28" src="/images/20161107041729Twitter_bird_logo_2012.svg">
