--- a/_sass/components/_social_wall.scss
+++ b/_sass/components/_social_wall.scss
@@ -53,16 +53,16 @@
         }
         /* Social_wall Blockquote */
         blockquote {
-            overflow: hidden;
-            margin: 0;
-            padding: 40px;
+            overflow:hidden;
+            padding: 20px 20px 0 20px;
             height: 200px;
             position: absolute;
             background: #FAFAFA;
-            opacity: 0;
+            opacity: .1;
             top: 0;
-            right: 15px;
-            left: 15px;
+            bottom:0;
+            margin:0;
+            margin-right: 15px;
             border: 0;
             &:hover {
                 transition: all 0.4s ease-in-out;
@@ -71,7 +71,7 @@
             h1,
             h1 a {
                 font-size: 14px;
-                line-height: 20px;
+                line-height: 24px;
                 color: $purple-primary;
                 word-break: break-word;
                 -webkit-hyphens: auto;
@@ -82,8 +82,8 @@
             }
             p.desc {
                 font-size: 12px;
-                margin-top: 5px;
-                margin-bottom: 5px;
+                margin:0;
+                padding:0;
                 color: #858585;
                 text-align:left;
                 a {
@@ -150,10 +150,10 @@
     }
     /* Status/message */
     p.status {
-        padding: 10px 20px;
+        padding: 0 20px;
         margin: 0;
+        height: 80px;
         text-align: left;
-        margin-bottom: 10px;
         color: #858585;
         font-size: 13px;
         line-height: 20px;
