--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -146,7 +146,7 @@ ol {
 .sports,
 .key_numbers {
     background-color: $purple-primary;
-    background-image: url('../images/layout/bkg_magenta.png');
+    background-image: url('../images/layout/bkg_magenta.svg');
     background-position: 50% 50%;
     background-size: cover;
     color: #fff;
@@ -160,7 +160,7 @@ ol {
 .news-page,
 .news_section {
     background-color: $blue-primary;
-    background-image: url('../images/layout/bkg_blue.png');
+    background-image: url('../images/layout/bkg_blue.svg');
     background-position: 0px 0px;
     background-size: cover;
     color: #fff;
