--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="{{site.lang}}">
+<html>
 
 {% include head.html %}
 
 <body>
   <div id="main">
+    <span id="lang" lang="{{site.lang}}"></span>
     {% include main_nav.html %} {{ content }} {% include footer.html %}
   
   </div>
