--- a/_sass/helpers/_variables.scss
+++ b/_sass/helpers/_variables.scss
@@ -1,4 +1,6 @@
 $blue-primary:     #0087cd;
 $dark-blue:     #005A8A;
 $purple-primary:   #ce0071;
-$gray-primary:     #858585;
+
+$gray-text: #858585;
+$gray-text-less: #b6b6b6;
