--- a/_sass/pages/_news.scss
+++ b/_sass/pages/_news.scss
@@ -7,7 +7,6 @@
 .new {
     height: 400px;
     position: relative;
-    cursor: pointer;
     background-color: #fff;
     padding: 0;
     .wrap_media {
@@ -43,7 +42,7 @@
 
 .p_news {
     padding-bottom: 10px;
-    color: #505050;
+    color: $gray-text;
     font-size: 14px;
     line-height: 20px;
 }
@@ -58,10 +57,14 @@
 
 .news_date {
     margin: 0;
-    color: #b6b6b6;
+    color: $gray-text-less;
     font-size: 12px;
     a {
         float: right;
         color: $blue-primary;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
